fix channels wrap height

--- a/src/styles/part/mineral-channels.module.css
+++ b/src/styles/part/mineral-channels.module.css
@@ -136,8 +136,6 @@
     background-image: url('../../assets/ruler-bg.svg');
     background-repeat: infinite;
     background-color: #202020;
-    /* TODO: fix height */
-    min-height: 100vh;
 }
 
 .channel {
